objects/Submarket__c.object
<CustomObject>
    <description>Lowest level geographical breakdown of where an account is located</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if submarket is active</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expedia_Sub_Market_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>ID from LCM</description>
        <label>Expedia Sub Market Id</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>External_Sub_Market_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Salesforce Id from PSG Org</description>
        <externalId>true</externalId>
        <label>External Sub Market Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <description>Links the Submarket to a market</description>
        <label>Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Submarkets</relationshipLabel>
        <relationshipName>Submarkets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>Market__r.Region__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Super_Region__c</fullName>
        <formula>Market__r.Region__r.Super_Region__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Super Region</label>
        <type>Text</type>
    </fields>
    <label>Submarket</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Market__c</columns>
        <columns>Region__c</columns>
        <columns>Super_Region__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Submarket Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Submarkets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>